# qec-ftqc-portfolio

./: .gitignore  CODING_STANDARDS.md  PHASE_0_LOG.md  PHASE_1_LOG.md  README.md  conftest.py  pyproject.toml  setup_env.ps1
.github/ISSUE_TEMPLATE/: phase_task.md
configs/: experiment_template.yaml
data/: .gitkeep
examples/: 01_gf2_stabilizer_basics.ipynb
qec_toolkit/: __init__.py
qec_toolkit/circuits/: __init__.py
qec_toolkit/codes/: __init__.py  base.py  repetition.py  steane.py
qec_toolkit/decoders/: __init__.py
qec_toolkit/plots/: __init__.py
qec_toolkit/simulation/: __init__.py
qec_toolkit/utils/: __init__.py
qec_toolkit/verification/: __init__.py  gf2.py
reports/: final_report.md
tests/: __init__.py  test_bb_parameters.py  test_css_commutation.py  test_gf2.py  test_small_codes.py
